# MyRenderer

./: CMakeLists.txt  README.md
Source/: Main.cpp
Source/Core/: Api.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  Macro.h  Mesh.cpp  Mesh.h  Platform.h  Texture.cpp  Texture.h
Source/Launch/: Blinn.cpp  Blinn.h
Source/Math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Quat.cpp  Quat.h  Vector.cpp  Vector.h
Source/Platform/: Win32.cpp
Source/Scene/: Cache.cpp  Cache.h  Model.cpp  Model.h  Scene.h
